--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -325,7 +325,7 @@
 		  padding: 0;
 		  top: 0;
 		  left: 0;
-		  width: 20%;
+		  width: 100%;
 		  display: none;
 		  opacity: 0;
 		  visibility: hidden;
@@ -397,12 +397,12 @@
 									padding:0 0 0 0;">
 							<div style="width:100%; background:#f2f2f2" align="right">
 								<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-								<input type="search" class="search_tp" autosave="5" id="clc_fe" onsearch="search_func()" 
+								<input type="search" class="search_tp" autosave="5" id="discom_5E/PS" onsearch="search_func()" 
 										placeholder="Search discom_5E / PS">
 								<p id="search_res" style="margin:0 6 0 0; font-size:14; font-family:'Avenir', 'light'; color:grey"></p>
 								<script>
 								function search_func() {
-								   var x = document.getElementById("clc_fe");
+								   var x = document.getElementById("discom_5E/PS");
 								   document.getElementById("search_res").innerHTML = '<br>' + x.value;
 								}
 								</script>
@@ -726,13 +726,13 @@
 									<td style="padding:12 0 0 80">
 										<div style="padding:0 0 0 0; margin:0 0 0 0" align="right">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="search" class="search" autosave="5" id="clc_fe1" onsearch="search_func1()" 
+											<input type="search" class="search" autosave="5" id="discom_5E/PS_1" onsearch="search_func1()" 
 													placeholder="Search discom_5E / PS">
 											<div style="border-bottom:1 solid #f2f2f2"></div>
 											<p id="search_res1" style="margin:0 6 0 0; font-size:14; font-family:'Avenir', 'light"></p>
 											<script>
 											function search_func1() {
-											   var x = document.getElementById("clc_fe1");
+											   var x = document.getElementById("discom_5E/PS_1");
 											   document.getElementById("search_res1").innerHTML = "<br>" + x.value;
 											}
 											</script>
@@ -829,10 +829,12 @@
 								    &#9656;
 								    <ul class="countries">
 								     	<li>
+								     		<span style="font-size:13">P<sub>S</sub>:&nbsp;</span>
 								      		<a class="textnav_f2">&#9508;</a>
 							  				<a class="textnav_f2">&#9500;</a>
 							  			</li>
 								    	<li>
+								    		<span style="font-size:13">S<sub>S</sub>:&nbsp;</span>
 								      		<a class="textnav_f2">&#9508;</a>
 							  				<a class="textnav_f2">&#9500;</a>
 								     	</li>
@@ -958,13 +960,13 @@
 									<td style="padding:12 0 0 80">
 										<div style="padding:0 0 0 0; margin:0 0 0 0" align="right">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="search" class="search" autosave="5" id="clc_fe2" onsearch="search_func2()" 
+											<input type="search" class="search" autosave="5" id="discom_5E/PS_2" onsearch="search_func2()" 
 													placeholder="Search discom_5E / PS">
 											<div style="border-bottom:1 solid #f2f2f2"></div>
 											<p id="search_res2" style="margin:0 6 0 0; font-size:14; font-family:'Avenir', 'light"></p>
 											<script>
 											function search_func2() {
-											   var x = document.getElementById("clc_fe2");
+											   var x = document.getElementById("discom_5E/PS_2");
 											   document.getElementById("search_res2").innerHTML = "<br>" + x.value;
 											}
 											</script>
@@ -1047,14 +1049,23 @@
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
 							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
-								<div style="float:right; margin:0 10 0 0">
-							  		<a class="textnav_f2">&#9508;</a>
-							  		<a class="textnav_f2">&#9500;</a>
-							  	</div>
-							  	<div style="float:right; margin:0 15 0 0">
-							  		<a class="textnav_f2">&#9508;</a>
-							  		<a class="textnav_f2">&#9500;</a>
-							  	</div>
+								<ul class="countries">
+								  <li>
+								    &#9656;
+								    <ul class="countries">
+								     	<li>
+								     		<span style="font-size:13">P<sub>S</sub>:&nbsp;</span>
+								      		<a class="textnav_f2">&#9508;</a>
+							  				<a class="textnav_f2">&#9500;</a>
+							  			</li>
+								    	<li>
+								    		<span style="font-size:13">S<sub>S</sub>:&nbsp;</span>
+								      		<a class="textnav_f2">&#9508;</a>
+							  				<a class="textnav_f2">&#9500;</a>
+								     	</li>
+								    </ul>
+								  </li>
+								</ul>
 							</div>
 							<div class="infscrll">
 								<table style="padding: 0 20 0 0">
@@ -1165,13 +1176,13 @@
 									<td style="padding:12 0 0 80">
 										<div style="padding:0 0 0 0; margin:0 0 0 0" align="right">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="search" class="search" autosave="5" id="clc_fe3" onsearch="search_func3()" 
+											<input type="search" class="search" autosave="5" id="discom_5E/PS_3" onsearch="search_func3()" 
 													placeholder="Search discom_5E / PS">
 											<div style="border-bottom:1 solid #f2f2f2"></div>
 											<p id="search_res3" style="margin:0 6 0 0; font-size:14; font-family:'Avenir', 'light"></p>
 											<script>
 											function search_func3() {
-											   var x = document.getElementById("clc_fe3");
+											   var x = document.getElementById("discom_5E/PS_3");
 											   document.getElementById("search_res3").innerHTML = "<br>" + x.value;
 											}
 											</script>
@@ -1245,14 +1256,23 @@
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
 							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
-								<div style="float:right; margin:0 10 0 0">
-							  		<a class="textnav_f2">&#9508;</a>
-							  		<a class="textnav_f2">&#9500;</a>
-							  	</div>
-							  	<div style="float:right; margin:0 15 0 0">
-							  		<a class="textnav_f2">&#9508;</a>
-							  		<a class="textnav_f2">&#9500;</a>
-							  	</div>
+								<ul class="countries">
+								  <li>
+								    &#9656;
+								    <ul class="countries">
+								     	<li>
+								     		<span style="font-size:13">P<sub>S</sub>:&nbsp;</span>
+								      		<a class="textnav_f2">&#9508;</a>
+							  				<a class="textnav_f2">&#9500;</a>
+							  			</li>
+								    	<li>
+								    		<span style="font-size:13">S<sub>S</sub>:&nbsp;</span>
+								      		<a class="textnav_f2">&#9508;</a>
+							  				<a class="textnav_f2">&#9500;</a>
+								     	</li>
+								    </ul>
+								  </li>
+								</ul>
 							</div>
 							<div class="infscrll">
 								<table style="padding: 0 0 0 0">
@@ -1342,17 +1362,17 @@
 						<td style="vertical-align:top; width:50%; height:100%">
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
-									<td style="vertical-align:top">Fundamental Principles of Counting</td>
-									<td style="padding:2 0 0 80">
+									<td style="vertical-align:top; padding:11 0 0 1">Fundamental Principles of Counting</td>
+									<td style="padding:12 0 0 80">
 										<div style="padding:0 0 0 0; margin:0 0 0 0" align="right">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="search" class="search" autosave="10" id="clc_fe_s4" onsearch="search_func4()" 
-													placeholder="Search discom_5E / P">
+											<input type="search" class="search" autosave="5" id="discom_5E/PS_4" onsearch="search_func4()" 
+													placeholder="Search discom_5E / PS">
 											<div style="border-bottom:1 solid #f2f2f2"></div>
 											<p id="search_res4" style="margin:0 6 0 0; font-size:14; font-family:'Avenir', 'light"></p>
 											<script>
 											function search_func4() {
-											   var x = document.getElementById("clc_fe_s4");
+											   var x = document.getElementById("discom_5E/PS_4");
 											   document.getElementById("search_res4").innerHTML = "<br>" + x.value;
 											}
 											</script>
@@ -1413,9 +1433,27 @@
 						</td>
 						<td style="vertical-align:top;
 									width:50%; height:100%;
-									padding: 0 0 0 18;
-									border-top:20 solid #f2f2f2;
+									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
+							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+								<ul class="countries">
+								  <li>
+								    &#9656;
+								    <ul class="countries">
+								     	<li>
+								     		<span style="font-size:13">P<sub>S</sub>:&nbsp;</span>
+								      		<a class="textnav_f2">&#9508;</a>
+							  				<a class="textnav_f2">&#9500;</a>
+							  			</li>
+								    	<li>
+								    		<span style="font-size:13">S<sub>S</sub>:&nbsp;</span>
+								      		<a class="textnav_f2">&#9508;</a>
+							  				<a class="textnav_f2">&#9500;</a>
+								     	</li>
+								    </ul>
+								  </li>
+								</ul>
+							</div>
 							<div class="infscrll">
 								<table style="padding:0 20 0 0">
 									<tr>
