--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -28,16 +28,14 @@
 		
 		<!-- CSS -->
 		<style type="text/css">
-
-		app / assets / stylesheets / custom.css.scss
 		
 		html{
 		   overflow-y: scroll;
 		}
 		code{
+			color:grey;
 			font-size:13; 
 			background: #FAF8F9;
-			color:grey;
 			font-family: "SourceCodePro-Regular";
 		}
 		.code_block{
@@ -49,22 +47,19 @@
 			background:#FAF8F9;
 			font-family: "SourceCodePro-Regular";
 		}
-
 		.unselectable {
-		    -webkit-touch-callout: none;
-		    -webkit-user-select: none;
-		    -khtml-user-select: none;
-		    -moz-user-select: none;
-		    -ms-user-select: none;
 		    user-select: none;
+		    -ms-user-select: none;
+		    -moz-user-select: none;
+		    -khtml-user-select: none;
+		    -webkit-user-select: none;
+		    -webkit-touch-callout: none;
 		}
-
 		.MathJax:focus, .mjx-chtml:focus, .MathJax_SVG:focus {
    			outline:none;
+   			padding: 2 2 2 2;
    			border: 1 solid #f2f2f2;
-   			padding: 2 2;
 		}
-
 		.t_contents {
 		    height:92.8% !important;
 		    overflow:scroll !important;
@@ -73,7 +68,6 @@
 		    font-family:'Avenir', 'light';
 		    padding:0 0 10 40;
 		}						
-
 		.infscrll {
 		    height: 93.3% !important;
 		    overflow:scroll !important;
@@ -86,36 +80,12 @@
 		    font-size:15;
 		}
 		.c1p1 {
-		    height: 88% !important;
+		    height: 85% !important;
 		    overflow:scroll !important;
 		    font-size:15; 
 		    margin: 0 0 0 20;
 		    padding: 5 0 0 0;
-		    border-top: 1 solid #f2f2f2;
-		}
-		.c1p4 {
-		    height: 635 !important;
-		    overflow: scroll;
-		    font-size:15; 
-		    margin: 0 0 0 45;
-		    padding: 5 0 0 0;
-		    border-top: 1 solid #f2f2f2;
-		}
-		.c1p6 {
-		    height: 635 !important;
-		    overflow: scroll;
-		    font-size:15; 
-		    margin: 0 0 0 45;
-		    padding: 5 0 0 0;
-		    border-top: 1 solid #f2f2f2;
-		}
-		.c1p12 {
-		    height: 561 !important;
-		    overflow: scroll;
-		    font-size:15; 
-		    margin: 0 0 0 45;
-		    padding: 5 20 0 0;
-		    border-top: 1 solid #f2f2f2;
+		    /*border-top: 1 solid #f2f2f2;*/
 		}
 		.infscrll_dc {
 		    height:85.7% !important;
@@ -123,6 +93,13 @@
 		    font-size:15; 
 		    padding-top:20;
 		    margin:-8 0 0 0;
+		}
+		.field_6{
+			width:100%; 
+			height:10; 
+			margin:0 0 0 0; 
+			padding:0 0 12 0; 
+			background:#f2f2f2
 		}
 
 		canvas {
@@ -740,6 +717,23 @@
 									</td>
 								</tr>
 							</table>
+							<div class="field_6">
+								<ul class="discom_5ep">
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
+								</ul>
+							</div>
 							<div class="c1p1">
 								<p class="subtitle">1.1 The Rules of Sum and Product &#9634; 1.2 Permutations</p>
 								<table style="padding:0 0 0 0">
@@ -823,21 +817,21 @@
 									width:50%; height:100%;
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
-							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+							<div class="field_6">
 								<ul class="discom_5ep">
-								  <li>
-								    &#9656;
-								    <ul class="discom_5ep">
-								     	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-							  			</li>
-								    	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-								     	</li>
-								    </ul>
-								  </li>
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
 								</ul>
 							</div>
 							<div class="infscrll">
@@ -972,6 +966,23 @@
 									</td>
 								</tr>
 							</table>
+							<div class="field_6">
+								<ul class="discom_5ep">
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
+								</ul>
+							</div>
 							<div class="c1p1">
 								<table style="padding: 10 20 0 0">
 									<tr>
@@ -1046,21 +1057,21 @@
 									width:50%; height:100%;
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
-							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+							<div class="field_6">
 								<ul class="discom_5ep">
-								  <li>
-								    &#9656;
-								    <ul class="discom_5ep">
-								     	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-							  			</li>
-								    	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-								     	</li>
-								    </ul>
-								  </li>
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
 								</ul>
 							</div>
 							<div class="infscrll">
@@ -1186,6 +1197,23 @@
 									</td>
 								</tr>
 							</table>
+							<div class="field_6">
+								<ul class="discom_5ep">
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
+								</ul>
+							</div>
 							<div class="c1p1">
 								<table style="padding: 10 20 0 0">
 									<tr>
@@ -1251,7 +1279,7 @@
 									width:50%; height:100%;
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
-							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+							<div class="field_6">
 								<ul class="discom_5ep">
 								  <li>
 								    &#9656;
@@ -1374,6 +1402,23 @@
 									</td>
 								</tr>
 							</table>
+							<div class="field_6">
+								<ul class="discom_5ep">
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
+								</ul>
+							</div>
 							<div class="c1p1">
 								<table style="padding: 10 0 0 0">
 									<tr>
@@ -1429,21 +1474,21 @@
 									width:50%; height:100%;
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
-							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+							<div class="field_6">
 								<ul class="discom_5ep">
-								  <li>
-								    &#9656;
-								    <ul class="discom_5ep">
-								     	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-							  			</li>
-								    	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-								     	</li>
-								    </ul>
-								  </li>
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
 								</ul>
 							</div>
 							<div class="infscrll">
@@ -1537,6 +1582,23 @@
 									</td>
 								</tr>
 							</table>
+							<div class="field_6">
+								<ul class="discom_5ep">
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
+								</ul>
+							</div>
 							<div class="c1p1">
 								<table style="padding: 10 0 0 0">
 									<tr>
@@ -1603,7 +1665,7 @@
 									width:50%; height:100%;
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
-							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+							<div class="field_6">
 								<ul class="discom_5ep">
 								  <li>
 								    &#9656;
@@ -1724,6 +1786,23 @@
 									</td>
 								</tr>
 							</table>
+							<div class="field_6">
+								<ul class="discom_5ep">
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
+								</ul>
+							</div>
 							<div class="c1p1">
 								<table style="padding:10 0 0 0">
 									<tr>
@@ -1833,21 +1912,21 @@
 									width:50%; height:100%;
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
-							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+							<div class="field_6">
 								<ul class="discom_5ep">
-								  <li>
-								    &#9656;
-								    <ul class="discom_5ep">
-								     	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-							  			</li>
-								    	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-								     	</li>
-								    </ul>
-								  </li>
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
 								</ul>
 							</div>
 							<div class="infscrll">
@@ -2226,6 +2305,23 @@
 									</td>
 								</tr>
 							</table>
+							<div class="field_6">
+								<ul class="discom_5ep">
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
+								</ul>
+							</div>
 							<div class="c1p1">
 								<table style="padding:10 20 0 0">
 									<tr>
@@ -2382,21 +2478,21 @@
 									width:50%; height:100%;
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
-							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+							<div class="field_6">
 								<ul class="discom_5ep">
-								  <li>
-								    &#9656;
-								    <ul class="discom_5ep">
-								     	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-							  			</li>
-								    	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-								     	</li>
-								    </ul>
-								  </li>
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
 								</ul>
 							</div>
 							<div class="infscrll">
@@ -2674,6 +2770,23 @@
 									</td>
 								</tr>
 							</table>
+							<div class="field_6">
+								<ul class="discom_5ep">
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
+								</ul>
+							</div>
 							<div class="c1p1">
 								<table style="padding:10 20 0 0">
 									<tr>
@@ -2751,21 +2864,21 @@
 									width:50%; height:100%;
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
-							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+							<div class="field_6">
 								<ul class="discom_5ep">
-								  <li>
-								    &#9656;
-								    <ul class="discom_5ep">
-								     	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-							  			</li>
-								    	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-								     	</li>
-								    </ul>
-								  </li>
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
 								</ul>
 							</div>
 							<div class="infscrll">
@@ -3131,6 +3244,23 @@
 									</td>
 								</tr>
 							</table>
+							<div class="field_6">
+								<ul class="discom_5ep">
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
+								</ul>
+							</div>
 							<div class="c1p1">
 								<table style="padding:10 20 10 0">
 									<tr>
@@ -3335,21 +3465,21 @@
 									width:50%; height:100%;
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
-							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+							<div class="field_6">
 								<ul class="discom_5ep">
-								  <li>
-								    &#9656;
-								    <ul class="discom_5ep">
-								     	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-							  			</li>
-								    	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-								     	</li>
-								    </ul>
-								  </li>
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
 								</ul>
 							</div>
 							<div class="infscrll">
@@ -3490,6 +3620,23 @@
 									</td>
 								</tr>
 							</table>
+							<div class="field_6">
+								<ul class="discom_5ep">
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
+								</ul>
+							</div>
 							<div class="c1p1">
 								<table style="padding:10 20 0 0">
 									<tr>
@@ -3576,21 +3723,21 @@
 									width:50%; height:100%;
 									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
-							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+							<div class="field_6">
 								<ul class="discom_5ep">
-								  <li>
-								    &#9656;
-								    <ul class="discom_5ep">
-								     	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-							  			</li>
-								    	<li>
-								      		<a class="textnav_f2">&#9679;&#9508;</a>
-							  				<a class="textnav_f2">&#9500;&#9679;</a>
-								     	</li>
-								    </ul>
-								  </li>
+								  	<li>
+								    	&#9656;
+									    <ul class="discom_5ep">
+									     	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+								  			</li>
+									    	<li>
+									      		<a class="textnav_f2">&#9679;&#9508;</a>
+								  				<a class="textnav_f2">&#9500;&#9679;</a>
+									     	</li>
+									    </ul>
+								  	</li>
 								</ul>
 							</div>
 							<div class="infscrll">
