--- a/P_sets/p_sets/c1_ps1-5.html
+++ b/P_sets/p_sets/c1_ps1-5.html
@@ -1,27 +1,26 @@
 <html>
 	<p class="subtitle">1.1 The Rules of Sum and Product &#9634; 1.2 Permutations</p>
-	<table style="padding:0 0 0 0">
+	<table>
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 00">01.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
+			<td class="vtop_zero">01.</td>
+			<td class="vtop_r20l10">
 				During a local campaign, eight Republican and five Democratic candidates are nominated for president of the school board.
-				<table style="padding:10 0 0 ">
+				<table class="pt10">
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">(a)</td>
-						<td style="vertical-align:top; padding:0 0 0 10">
+						<td class="vtop_zero">(a)</td>
+						<td class="vtop_lten">
 							If the president is to be one of these candidates, how many possibilities are there for the eventual winner?
 						</td>
 					</tr>
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">(b)</td>
-						<td style="vertical-align:top; padding:0 0 0 10">
+						<td class="vtop_zero">(b)</td>
+						<td class="vtop_lten">
 							How many possibilities exist for a pair of candidates (one from each party) to oppose each other for the eventual election?
 						</td>
 					</tr>
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">(c)</td>
-						<td style="vertical-align:top; padding:0 0 0 10">
-							
+						<td class="vtop_zero">(c)</td>
+						<td class="vtop_lten">
 							Which counting principle is used in part (a)? in part (b)?
 						</td>
 					</tr>
@@ -29,37 +28,37 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding: 20 0 0 0">
+	<table class="pt_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 00">02.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
+			<td class="vtop_zero">02.</td>
+			<td class="vtop_r20l10">
 				Answer part (c) of Example 1.6
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 0 0 0">
+	<table class="pt_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 00">03.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
+			<td class="vtop_zero">03.</td>
+			<td class="vtop_r20l10">
 				Buick automobiles come in four models, 12 colors, three engine sizes, and two transmission types. (a) How many distinct Buicks can be manufactured? (b) If one of the available colors is blue, how many different blue Buicks can be manufactured?
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 0 0 0">
+	<table class="pt_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 00">04.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
+			<td class="vtop_zero">04.</td>
+			<td class="vtop_r20l10">
 				The board of directors of a pharmaceutical corporation has 10 members. An upcoming stockholders' meeting is scheduled to approve a new slate of company officers (chosen from the 10 board members).
-				<table style="padding:10 0 0 ">
+				<table class="pt10">
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">(a)</td>
-						<td style="vertical-align:top; padding:0 0 0 10">
+						<td class="vtop_zero">(a)</td>
+						<td class="vtop_lten">
 							How many different slates consisting of preident, vice president, secretary, and treasurer can the board present to the stockholders for their approval?
 						</td>
 					</tr>
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">(b)</td>
-						<td style="vertical-align:top; padding:0 0 0 10">
+						<td class="vtop_zero">(b)</td>
+						<td class="vtop_lten">
 							Three members of the board of directors are physicians. How many slates from part (a) have (i) a physician nominated for the presidency? (ii) exactly one physician appearing on the slate? (iii) at least one physician appearing on the slate?
 						</td>
 					</tr>
@@ -67,10 +66,10 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 0 0 0">
+	<table class="pt_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 00 00 00">05.</td>
-			<td style="vertical-align:top; padding:0 20 15 10">
+			<td class="vtop_zero">05.</td>
+			<td class="vtop_r20-b15-l10">
 				While on a Saturday shopping spree, Jennifer and Tiffany witnessed two men driving away from the front of a jewelry shop, just before a burglar alarm started to sound. Although everything happend rather quickly, when the two young ladies were questioned they were able to give the police the following information about the license plate (which consisted of two letters followed by four digits) on the get&ndash;away car. Tiffany was sure that the second letter on the plate was either an O or a Q and the last digit was either a 3 or an 8. Jennifer told the investigator that the first letter on the plate was either a C or a G and that the first digit was definitely a 7. How many different license plates will the police have to check out?
 			</td>
 		</tr>
